Fix grid container overflow

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   max-width: 700px;
   height: 700px;
   margin-top: 20px;
+  overflow: hidden;
 }
 
 .grid-box-row{
